--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,5 @@
 // Variables
-$primary: #E6A040 !default;
+$primary: #FF6200 !default;
 $accent-color: #0097b1;
 
 $gray-100: #f8f9fa !default;
@@ -42,3 +42,6 @@ $gulpLogo:    #DB4446;
 $gruntLogo:   #FBA91A;
 $npmLogo:     #CC3534;
 $angularLogo: #B52E31;
+
+// Styling
+$smolr: 2rem;
