--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -1,5 +1,6 @@
 .about-section {
-    padding-top: 10rem;
+    padding-top: 5rem;
+    min-height: 100vh;
     p {
         margin-bottom: 5rem;
     }
