--- a/scss/_experience.scss
+++ b/scss/_experience.scss
@@ -1,5 +1,6 @@
 .experience-section {
-    padding: 10rem 0;
+    padding: 5rem 0;
+    min-height: 100vh;
     .featured-text {
         padding: 2rem;
         @media (min-width: 992px) {
