--- a/scss/_interests.scss
+++ b/scss/_interests.scss
@@ -1,5 +1,6 @@
 .interests-section {
-    padding: 10rem 0;
+    padding: 5rem 0;
+    min-height: 100vh;
     i {
         font-size: 3rem;
         margin: 0 20px 20px 20px;
