--- a/scss/mySiteStyles.scss
+++ b/scss/mySiteStyles.scss
@@ -41,6 +41,10 @@ a {
     font-size: 1.2rem;
 }
 
+.section-title {
+    margin-bottom: 4rem;
+}
+
 .strike-that {
     text-decoration: line-through;
 }
