--- a/scss/mySiteStyles.scss
+++ b/scss/mySiteStyles.scss
@@ -45,6 +45,10 @@ a {
     margin-bottom: 4rem;
 }
 
+.flav-text {
+    color: $gray-650;
+}
+
 .strike-that {
     text-decoration: line-through;
 }
