--- a/scss/mySiteStyles.scss
+++ b/scss/mySiteStyles.scss
@@ -11,7 +11,7 @@
 @import 'contact.scss';
 
 body {
-  font-family: 'Nunito';
+  font-family: 'Montserrat', sans-serif;
   letter-spacing: 0.0625em;
 }
 
