--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -5,7 +5,7 @@
   font-size: 80%;
   text-transform: uppercase;
   letter-spacing: .15rem;
-  border: 0;
+  border: .5px solid #ebebeb;
 }
 
 .btn-primary {
