--- a/scss/_interests.scss
+++ b/scss/_interests.scss
@@ -8,4 +8,15 @@
     i:hover {
         color: $primary;
     }
+    .btn {
+        color: $primary;
+        &:hover {
+            background-color: $gray-100;
+            color: lighten($primary, 10%);
+        }
+        &:focus {
+            background: linear-gradient(($gray-100)50%, $gray-200);
+            color: lighten($primary, 10%);
+        }
+    }
 }
