--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -9,10 +9,11 @@
     background-attachment: scroll;
     background-size: cover;
     h1 {
-        font-family: 'Varela Round';
-        font-size: 2.5rem;
+        font-family: 'Cinzel Decorative', cursive;
+        font-weight: bold;
+        font-size: 2.4rem;
         line-height: 2.5rem;
-        letter-spacing: 0.8rem;
+        letter-spacing: 0.5rem;
         background: -webkit-linear-gradient(fade-out(white, 0.1), fade-out(white, 1));
         -webkit-text-fill-color: transparent;
         -webkit-background-clip: text;
@@ -32,8 +33,8 @@
         height: 100vh;
         padding: 0;
         h1 {
-            font-size: 6.5rem;
-            line-height: 6.5rem;
+            font-size: 6.2rem;
+            line-height: 6.9rem;
             letter-spacing: 0.8rem;
         }
         h2 {
@@ -41,10 +42,13 @@
             font-size: 1.25rem;
         }
     }
+    .masthead-title {
+        font-family: 'Cinzel Decorative', cursive;
+    }
 }
 
 // Space Fill
 .space-fill {
     background: #161616;
-    min-height: 150px;
+    min-height: 200px;
 }
